--- a/CRM/CRM.Windows/ContactPage.xaml
+++ b/CRM/CRM.Windows/ContactPage.xaml
@@ -1,4 +1,5 @@
-﻿<Page
+﻿
+<Page
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:CRM"
@@ -8,17 +9,32 @@
     xmlns:Input="using:Telerik.UI.Xaml.Controls.Input"
     x:Class="CRM.ContactPage"
     mc:Ignorable="d" Width="1363" BorderBrush="#FF1D1D1D">
-
-    <Grid x:Name="grdBack" Background="White" Margin="0,0,-10,0">
+    <Grid x:Name="grdBack" Background="Black" Margin="0,0,-10,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Grid:RadDataGrid x:Name="grdContact" HorizontalAlignment="Left" VerticalAlignment="Top" Height="681" Width="1373" Grid.ColumnSpan="2" Margin="0,87,0,0" BorderBrush="#FF1D1D1D" />
-        <StackPanel Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="87" VerticalAlignment="Top" Width="1373" Background="#FF1D1D1D" RenderTransformOrigin="0.5,0.747" >
-            <Button Content="Button" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="85" Margin="-3,0,1122,0" BorderBrush="#FF1D1D1D" Background="#FF1D1D1D" RenderTransformOrigin="0.507,2.074"/>
-        </StackPanel>
-        <Button Grid.ColumnSpan="2" Content="Button" HorizontalAlignment="Left" Margin="291,-3,0,0" VerticalAlignment="Top" Width="255" Height="93" BorderBrush="#FF1D1D1D" Background="#FF1D1D1D"/>
+        <Grid:RadDataGrid x:Name="grdContact" HorizontalAlignment="Left" VerticalAlignment="Top" Height="623" Width="1373" Grid.ColumnSpan="2" Margin="0,145,0,0" BorderBrush="#FF1D1D1D" />
     </Grid>
-
+    <Page.TopAppBar>
+        <AppBar x:Name="bottomAppBar" Padding="10,0,10,0">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Orientation="Horizontal">
+                    <Button Style="{StaticResource AppBarButtonStyle}" 
+AutomationProperties.Name="Кнопка"/>
+                    <Button Style="{StaticResource PageAppBarButtonStyle}" />
+                    <Button Style="{StaticResource VideoChatAppBarButtonStyle}"/>
+                </StackPanel>
+                <StackPanel Grid.Column="1" 
+HorizontalAlignment="Right" Orientation="Horizontal">
+                    <Button Style="{StaticResource BulletsAppBarButtonStyle}" />
+                </StackPanel>
+            </Grid>
+        </AppBar>
+    </Page.TopAppBar>
 </Page>
+    
