--- a/CRM/CRM.Windows/CustomerPage.xaml
+++ b/CRM/CRM.Windows/CustomerPage.xaml
@@ -1,25 +1,17 @@
 ﻿<Page
+    x:Class="CRM.CustomerPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:CRM"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:Grid="using:Telerik.UI.Xaml.Controls.Grid"
-    xmlns:Input="using:Telerik.UI.Xaml.Controls.Input"
-    x:Class="CRM.ContactPage"
-    mc:Ignorable="d" Width="1363" BorderBrush="#FF1D1D1D">
+    mc:Ignorable="d">
 
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid x:Name="grdBack" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0*"/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-
-        <TextBlock x:Name="tbTitle" Text="Contacts" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
+        <TextBlock x:Name="tbTitle" Text="Customers" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Top" Margin="39,41,1055,0" Height="74"/>
 
-        <Grid:RadDataGrid x:Name="grdContact" HorizontalAlignment="Left" VerticalAlignment="Top" Height="623" Width="1373" Grid.ColumnSpan="2" Margin="0,145,0,0" BorderBrush="#FF1D1D1D" />
     </Grid>
     <Page.TopAppBar>
         <AppBar x:Name="abNavigation" Padding="10,0,10,0">
@@ -31,11 +23,10 @@
                 <StackPanel Orientation="Horizontal" Grid.ColumnSpan="2" Margin="0,0,404,0">
                     <Button Name="btnToMeetings"  Content="To Meetings" Height="44" Margin="0,23,0,-3" Width="230" Click="btnToMeetings_Click"/>
                     <Button Name="btnToTasks"  Content="To Tasks"  Height="44" Margin="0,23,0,-3" Width="230" Click="btnToTasks_Click" />
-                    <Button Name="btnToCustomers" Content="To Customers" Height="44" Margin="0,23,0,-3" Width="230" Click="btnToCustomers_Click" />
+                    <Button Name="btnToContacts" Content="To Contacts" Height="44" Margin="0,23,0,-3" Width="230" Click="btnToContacts_Click" />
                     <Button Name="btnReLogin" Content="Change Login" Height="44" Margin="0,23,0,-3" Width="230" Click="btnReLogin_Click" />
                 </StackPanel>
             </Grid>
         </AppBar>
     </Page.TopAppBar>
 </Page>
-    
