--- a/CRM/CRM.Windows/MeetingPage.xaml
+++ b/CRM/CRM.Windows/MeetingPage.xaml
@@ -1,13 +1,14 @@
 ﻿<Page
-    x:Name="pageRoot"
-    x:Class="CRM.MeetingPage"
-    DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:CRM"
     xmlns:common="using:CRM.Common"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:Grid="using:Telerik.UI.Xaml.Controls.Grid"
+    x:Name="pageRoot"
+    x:Class="CRM.MeetingPage"
+    DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Mode=Self}}"
     mc:Ignorable="d">
 
     <Page.Resources>
@@ -17,11 +18,22 @@
         Source="{Binding Items}"/>
     </Page.Resources>
 
-    <!--
-        Эта сетка выступает в роли корневой области страницы и определяет две строки:
-        * Строка 0 содержит кнопку "Назад" и заголовок страницы
-        * Строка 1 содержит оставшуюся часть страницы
-    -->
+    <Page.TopAppBar>
+        <AppBar x:Name="abNavigation" Padding="10,0,10,0">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Orientation="Horizontal" Grid.ColumnSpan="2" Margin="0,0,404,0">
+                    <Button x:Name="btnToContacts"  Content="To Contacts" Height="44" Margin="0,23,0,-3" Width="230" Click="btnToContacts_Click" />
+                    <Button x:Name="btnToTasks"  Content="To Tasks"  Height="44" Margin="0,23,0,-3" Width="230" Click="btnToTasks_Click" />
+                    <Button x:Name="btnToCustomers" Content="To Customers" Height="44" Margin="0,23,0,-3" Width="230" Click="btnToCustomers_Click" />
+                    <Button x:Name="btnReLogin" Content="Change Login" Height="44" Margin="0,23,0,-3" Width="230" Click="btnReLogin_Click" />
+                </StackPanel>
+            </Grid>
+        </AppBar>
+    </Page.TopAppBar>
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ChildrenTransitions>
             <TransitionCollection>
@@ -36,85 +48,6 @@
             <ColumnDefinition x:Name="primaryColumn" Width="420"/>
             <ColumnDefinition x:Name="secondaryColumn" Width="*"/>
         </Grid.ColumnDefinitions>
-
-        <!-- Кнопка "Назад" и заголовок страницы -->
-        <Grid x:Name="titlePanel">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="120"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <TextBlock x:Name="tbMeetings" Text="Meetings" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
-                        IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,0,40"/>
-        </Grid>
-
-        <!-- Список элементов с вертикальной прокруткой -->
-        <ListView
-            x:Name="meetingListView"
-            AutomationProperties.AutomationId="ItemsListView"
-            AutomationProperties.Name="Items"
-            TabIndex="1"
-            Grid.Row="1"
-            Margin="-10,-10,0,0"
-            Padding="120,0,0,60"
-            ItemsSource="{Binding Source={StaticResource itemsViewSource}}"
-            IsSwipeEnabled="False"
-            SelectionChanged="ItemListView_SelectionChanged">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <Grid Margin="6">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <Border Background="{ThemeResource ListViewItemPlaceholderBackgroundThemeBrush}" Width="60" Height="60">
-                            <Image Source="{Binding ImagePath}" Stretch="UniformToFill" AutomationProperties.Name="{Binding Title}"/>
-                        </Border>
-                        <StackPanel Grid.Column="1" Margin="10,0,0,0">
-                            <TextBlock Text="{Binding Title}" Style="{StaticResource TitleTextBlockStyle}" TextWrapping="NoWrap" MaxHeight="40"/>
-                            <TextBlock Text="{Binding Subtitle}" Style="{StaticResource CaptionTextBlockStyle}" TextWrapping="NoWrap"/>
-                        </StackPanel>
-                    </Grid>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-            <ListView.ItemContainerStyle>
-                <Style TargetType="FrameworkElement">
-                    <Setter Property="Margin" Value="0,0,0,10"/>
-                </Style>
-            </ListView.ItemContainerStyle>
-        </ListView>
-
-
-        <!-- Сведения о выделенном элементе -->
-        <ScrollViewer
-            x:Name="itemDetail"
-            AutomationProperties.AutomationId="ItemDetailScrollViewer"
-            Grid.Column="1"
-            Grid.RowSpan="2"
-            Padding="60,0,66,0"
-            DataContext="{Binding SelectedItem, ElementName=meetingListView}"
-            HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto"
-            ScrollViewer.HorizontalScrollMode="Disabled" ScrollViewer.VerticalScrollMode="Enabled"
-            ScrollViewer.ZoomMode="Disabled">
-
-            <Grid x:Name="itemDetailGrid" Margin="0,60,0,50">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-
-                <Image Grid.Row="1" Margin="0,0,20,0" Width="180" Height="180" Source="{Binding ImagePath}" Stretch="UniformToFill" AutomationProperties.Name="{Binding Title}"/>
-                <StackPanel x:Name="itemDetailTitlePanel" Grid.Row="1" Grid.Column="1">
-                    <TextBlock x:Name="itemTitle" Margin="0,-10,0,0" Text="{Binding Title}" Style="{StaticResource SubheaderTextBlockStyle}"/>
-                    <TextBlock x:Name="itemSubtitle" Margin="0,0,0,20" Text="{Binding Subtitle}" Style="{StaticResource SubtitleTextBlockStyle}"/>
-                </StackPanel>
-                <TextBlock Grid.Row="2" Grid.ColumnSpan="2" Margin="0,20,0,0" Text="{Binding Content}" Style="{StaticResource BodyTextBlockStyle}"/>
-            </Grid>
-        </ScrollViewer>
 
         <VisualStateManager.VisualStateGroups>
 
@@ -132,7 +65,7 @@
                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="itemDetail" Storyboard.TargetProperty="Visibility">
                             <DiscreteObjectKeyFrame KeyTime="0" Value="Collapsed"/>
                         </ObjectAnimationUsingKeyFrames>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="meetingListView" Storyboard.TargetProperty="Padding">
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="LwMeeting" Storyboard.TargetProperty="Padding">
                             <DiscreteObjectKeyFrame KeyTime="0" Value="120,0,90,60"/>
                         </ObjectAnimationUsingKeyFrames>
                     </Storyboard>
@@ -149,7 +82,7 @@
                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="primaryColumn" Storyboard.TargetProperty="Width">
                             <DiscreteObjectKeyFrame KeyTime="0" Value="0"/>
                         </ObjectAnimationUsingKeyFrames>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="meetingListView" Storyboard.TargetProperty="Visibility">
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="LwMeeting" Storyboard.TargetProperty="Visibility">
                             <DiscreteObjectKeyFrame KeyTime="0" Value="Collapsed"/>
                         </ObjectAnimationUsingKeyFrames>
                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="itemDetail" Storyboard.TargetProperty="(Grid.Row)">
@@ -171,21 +104,45 @@
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
-    </Grid>
-    <Page.TopAppBar>
-        <AppBar x:Name="abNavigation" Padding="10,0,10,0">
-            <Grid>
+        <!-- Кнопка "Назад" и заголовок страницы -->
+        <Grid x:Name="titlePanel">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock x:Name="tbMeetings" Text="Meetings" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
+				IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,0,40"/>
+        </Grid>
+
+        <!-- Сведения о выделенном элементе -->
+        <ScrollViewer
+			x:Name="itemDetail"
+			AutomationProperties.AutomationId="ItemDetailScrollViewer"
+			Grid.Column="1"
+			Grid.RowSpan="2"
+			Padding="60,0,66,0"
+			DataContext="{Binding SelectedItem, ElementName=LwMeeting}"
+			HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto"
+			ScrollViewer.HorizontalScrollMode="Disabled" ScrollViewer.VerticalScrollMode="Enabled"
+			ScrollViewer.ZoomMode="Disabled">
+
+            <Grid x:Name="itemDetailGrid" Margin="0,60,0,50">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <StackPanel Orientation="Horizontal" Grid.ColumnSpan="2" Margin="0,0,404,0">
-                    <Button Name="btnToContacts"  Content="To Contacts" Height="44" Margin="0,23,0,-3" Width="230" Click="btnToContacts_Click" />
-                    <Button Name="btnToTasks"  Content="To Tasks"  Height="44" Margin="0,23,0,-3" Width="230" Click="btnToTasks_Click" />
-                    <Button Name="btnToCustomers" Content="To Customers" Height="44" Margin="0,23,0,-3" Width="230" Click="btnToCustomers_Click" />
-                    <Button Name="btnReLogin" Content="Change Login" Height="44" Margin="0,23,0,-3" Width="230" Click="btnReLogin_Click" />
+                <StackPanel Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="291" Grid.RowSpan="3" VerticalAlignment="Top" Width="820">
+                    <TextBlock x:Name="tblCustomer" Height="68" Margin="467,0,0,0" FontSize="24" TextAlignment="Right" LineHeight="7"/>
+
                 </StackPanel>
+
             </Grid>
-        </AppBar>
-    </Page.TopAppBar>
+        </ScrollViewer>
+        <Grid:RadDataGrid Name ="grdMeeting"  HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Top" Height="628" Width="420"/>
+    </Grid>
 </Page>
